# language-comparison

./: .gitignore  README.md
crystal/: README.md  shard.yml
crystal/lib/: .shards.info
crystal/spec/: pinpoint_xref_spec.cr  spec_helper.cr  text_service_spec.cr
crystal/src/: main.cr  pinpoint_xref.cr  text_service.cr
crystal_app/: law_string  shard.yml
crystal_app/spec/: law_string_spec.cr  spec_helper.cr  text_service_spec.cr
crystal_app/src/: law_string.cr  text_service.cr
elixir/: README.md  mix.exs
elixir/lib/: elixir_app.ex  pinpoint_xref.ex  text_service.ex
elixir/test/: pinpoint_xref_test.exs  text_service_test.exs
elixir_app/: mix.exs
elixir_app/test/: elixir_app_test.exs
python/: main.py  pyproject.toml
python/src/: text_service.py
python/test/: text_service_test.py
python_app/: pyproject.toml
rust/: Cargo.toml
rust/src/: lib.rs
swift/: Package.swift  README.md
swift/Sources/TextService/: TextService.swift
swift/Tests/TextServiceTests/: TextServiceTests.swift
